# pragma-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.config/: nextest.toml
.github/workflows/: pragma.yaml  release.yaml
examples/: http.rs  http_sync.rs  ws_lightspeed.rs  ws_starkex.rs
src/: client.rs  config.rs  errors.rs  lib.rs
src/http/: mod.rs
src/http/offchain/: get_entry.rs  get_funding_rates.rs  get_historical_funding_rates.rs  mod.rs
src/http/offchain/entry/: mod.rs
src/http/offchain/funding_rates/: get_funding_rates.rs  get_historical_funding_rates.rs  mod.rs
src/http/onchain/: get_onchain_entry.rs  mod.rs
src/types/: aggregation.rs  entry_type.rs  interval.rs  mod.rs  network.rs
src/ws/: lightspeed.rs  mod.rs  starkex.rs
