[package]
name = "pragma-rs"
version = "0.1.1"
edition = "2021"
rust-version = "1.81"
categories = []
description = "SDK to interact with the Pragma API."
authors = ["Pragma <support@pragma.build>"]
keywords = ["pragma", "common", "utils"]
repository = "https://github.com/astraly-labs/pragma-rs"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-tungstenite = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2"
tokio = { version = "1", features = ["full"] }
