[package]
name = "pragma-rs"
version = "0.2.2"
edition = "2021"
rust-version = "1.81"
categories = []
description = "SDK to interact with the Pragma API."
authors = ["Pragma <support@pragma.build>"]
keywords = ["pragma", "common", "utils"]
repository = "https://github.com/astraly-labs/pragma-rs"
license = "MIT"

[features]
default = []
sync = ["reqwest/blocking"]
bigdecimal = ["dep:bigdecimal"]

[[example]]
name = "http_sync"
path = "examples/http_sync.rs"
required-features = ["sync"]

[dependencies]
pragma-common = "0.2.1"

reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3" }

# bigdecimal feature
bigdecimal = { version = "0.4.8", optional = true }
